--- a/gleam.toml
+++ b/gleam.toml
@@ -4,17 +4,16 @@ version = "0.1.0"
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
 #
-# licences = ["Apache-2.0"]
-# description = "A Gleam library..."
-# repository = { type = "github", user = "username", repo = "project" }
-# links = [{ title = "Website", href = "https://gleam.run" }]
+licences = ["Apache-2.0"]
+description = "A Gleam library for logging"
+repository = { type = "github", user = "JohnBjrk", repo = "glimt" }
 
 [dependencies]
 gleam_stdlib = "~> 0.25"
 gleam_erlang = "~> 0.17"
 galant = "~> 0.1"
 gleam_otp = "~> 0.5"
-birl = "~> 0.2"
+birl = "~> 0.3"
 gleam_json = "~> 0.5"
 
 [dev-dependencies]
