--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.0.0
-      - uses: erlef/setup-beam@v1.14.0
+      - uses: erlef/setup-beam@v1.15.0
         with:
           otp-version: "25.1"
           gleam-version: "0.25.0"
-          # elixir-version: "1.14.1"
+          rebar3-version: "3.20.0"
       - run: gleam format --check src test
       - run: gleam deps download
       - run: gleam test
