--- a/gleam.toml
+++ b/gleam.toml
@@ -8,13 +8,15 @@ licences = ["Apache-2.0"]
 description = "A Gleam library for logging"
 repository = { type = "github", user = "JohnBjrk", repo = "glimt" }
 
+gleam_version = ">= 1.0.0"
+
 [dependencies]
-gleam_stdlib = "~> 0.29"
-gleam_erlang = "~> 0.19"
-gleam_otp = "~> 0.5"
-birl = "~> 0.13"
-gleam_json = "~> 0.5"
-gleam_community_ansi = "~> 1.1"
+gleam_stdlib = "~> 0.36"
+gleam_erlang = "~> 0.24"
+gleam_otp = "~> 0.10"
+birl = "~> 1.5"
+gleam_json = "~> 1.0"
+gleam_community_ansi = "~> 1.4"
 
 [dev-dependencies]
 showtime = "~> 0.2"
